<resources>
    <string name="app_name"> MyShowList </string>

    //Strings for custom adding shows
    <string name="title_form"> Wprowadź tytuł </string>
    <string name="type_form"> Wprowadź typ produkcji </string>
    <string name="episodes_form"> Wprowadź liczbę odcinków </string>
    <string name="status_form"> Wprowadź status produkcji </string>
    <string name="rating_form"> Wprowadź swoją ocenę </string>
    <string name="description_form"> Wprowadź opis </string>

    //Strings for register and login purpose
    <string name="sign_up"> "SIGN UP" </string>
    <string name="sign_in"> "SIGN IN" </string>
    <string name="full_name"> "Full Name" </string>
    <string name="email"> "Email" </string>
    <string name="password"> "Password" </string>
    <string name="confirm_password"> "Confirm Password" </string>
    <string name="info_without_account"> "Don't have an account? Click here" </string>
    <string name="info_with_account"> "Already registered? Click here" </string>

    //Drawer Strings
    <string name="nav_drawer_open"> Open navigation drawer </string>
    <string name="nav_close_drawer"> Close navigation drawer </string>


</resources>
