<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/title_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/title_form" />

    <EditText
        android:id="@+id/type_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/type_form" />

    <EditText
        android:id="@+id/episodes_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/episodes_form" />

    <EditText
        android:id="@+id/status_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/status_form" />

    <EditText
        android:id="@+id/rating_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/rating_form" />

    <EditText
        android:id="@+id/description_edit"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:ems="10"
        android:gravity="start|top"
        android:text="@string/description_form"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/dodaj_custom_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Dodaj" />
</LinearLayout>